[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/Spikes.tres" type="TileSet" id=1]
[ext_resource path="res://res/Monsieur.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/Kid.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Warp.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/sprGameOver_0.png" type="Texture" id=7]
[ext_resource path="res://audio/musOnDeath.mp3" type="AudioStream" id=8]
[ext_resource path="res://scripts/Scene.gd" type="Script" id=9]

[node name="Scene" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655369, 1, 0, 655370, 1073741825, 0, 655371, 1, 0, 655372, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851992, 0, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917527, 1073741824, 0, 917528, 1073741824, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048595, 1073741824, 0, 1048596, 1073741824, 0, 1048597, 1073741824, 0, 1048598, 1073741824, 0, 1048599, 1073741824, 0, 1048600, 1073741824, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114126, 1, 0 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 327680, 1, 0, 327683, 1, 0, 327686, 1, 0, 327689, 1, 0, 393216, 1, 0, 393217, 1, 0, 393219, 1, 0, 393220, 1, 0, 393222, 1, 0, 393223, 1, 0, 393225, 1, 0, 393226, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524300, 1, 0, 589824, 1, 0, 589825, 1, 0, 589827, 1, 0, 589829, 1, 0, 589836, 1, 0, 655360, 1, 0, 655361, 1, 0, 655365, 1, 0, 655366, 1, 0, 655370, 1, 0, 655373, 1, 0, 720896, 1, 0, 720897, 1, 0, 720903, 1, 0, 720909, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786439, 1, 0, 786445, 1, 0, 851968, 1, 0, 851969, 1, 0, 851977, 1, 0, 851982, 1, 0, 917504, 1, 0, 917505, 1, 0, 917514, 1, 0, 917518, 1, 0, 983040, 1, 0, 983043, 1, 0, 983045, 1, 0, 983047, 1, 0, 1048576, 1, 0, 1048581, 1, 0, 1048588, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1073741824, 0, 1179664, 1073741824, 0, 1179665, 1073741824, 0, 1179666, 1073741824, 0, 1179667, 1073741824, 0, 1179668, 1073741824, 0, 1179669, 1073741824, 0, 1179670, 1073741824, 0, 1179671, 1073741824, 0, 1179672, 1073741824, 0 )

[node name="Spikes" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262147, 0, 0, 262169, 1, 0, 327681, 0, 0, 327687, 0, 0, 327690, 0, 0, 327705, 1, 0, 393221, 0, 0, 393227, 0, 0, 393241, 1, 0, 458764, 6, 0, 458777, 1, 0, 524294, 3, 0, 524296, 3, 0, 524297, 1073741824, 0, 524298, 3, 0, 524299, 3, 0, 524313, 1, 0, 589826, 1073741825, 0, 589828, 3, 0, 589849, 1, 0, 655363, 1073741831, 0, 655372, 3, 0, 655374, 6, 0, 655385, 1, 0, 720901, 1073741824, 0, 720902, 1073741826, 0, 720906, 1073741824, 0, 720921, 1, 0, 786441, 1073741828, 0, 786444, 1073741826, 0, 786446, 7, 0, 786457, 1, 0, 851971, 1073741824, 0, 851975, 3, 0, 851978, 1073741827, 0, 851981, 3, 0, 851993, 1, 0, 917506, 1073741825, 0, 917509, 1073741827, 0, 917513, 1073741826, 0, 917519, 6, 0, 917529, 1, 0, 983052, 1073741827, 0, 983065, 1, 0, 1048577, 0, 0, 1048578, 0, 0, 1048580, 0, 0, 1048582, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048590, 7, 0, 1048593, 7, 0, 1048601, 1, 0, 1114137, 1, 0, 1179673, 1, 0 )

[node name="Kid" parent="." groups=["kid"] instance=ExtResource( 3 )]
position = Vector2( 84, 345 )

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GameOver"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GameOver/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Warp" parent="." instance=ExtResource( 4 )]
position = Vector2( -16, 80 )
scale = Vector2( 1, 5 )

[connection signal="body_entered" from="Warp" to="." method="_on_Warp_body_entered"]
